en/identity-server/5.11.0/docs/setup/environment-compatibility.md
# Environment Compatibility


### Tested Operating Systems and JDKs

As WSO2 Identity Server is a Java application, you can generally run them on most operating systems. Given below are the JDKs that we have tested our products with.

<table>
	<tr>
		<th>Supported JDK versions</th>	
		<td>
			<ul>
<<<<<<<< HEAD:en/identity-server/5.11.0/docs/setup/environment-compatibility.md
				<li>JDK 11.0.8</li>
				<li>JDK 11.0.9</li>
========
				<li>CorrettoJDK 8</li>
				<li>CorrettoJDK 11</li>
				<li>AdoptOpenJDK 8</li>
				<li>AdoptOpenJDK 11</li>
>>>>>>>> 5.10.0-docs-old:en/identity-server/5.10.0/docs/setup/environment-compatibility.md
				<li>OpenJDK 8</li>
				<li>OpenJDK 11</li>
				<li>Oracle JDK 8</li>
				<li>Oracle JDK 11</li>
			</ul>
		</td>
	</tr>
	<tr>
		<th>Supported Operating Systems</th>
		<td>
			<ul>
				<li>Ubuntu 16.04</li>
				<li>Ubuntu 18.04</li>
				<li>Ubuntu 20.04</li>
				<li>CentOS 7</li>
				<li>Windows Server 2019 Standard x64</li>
				<li>Windows Server 2016 Standard x64</li>
				<li>Windows 10</li>
				<li>Mac OS 10.13.6</li>
			</ul>
		</td>
	</tr>
</table>>

Given below are the JDKs and Operating Systems we have tested WSO2 Identity Server Analytics with.

<table>
	<tr>
		<th>Supported JDK versions</th>	
		<td>
			<ul>
				<li>OpenJDK 8</li>
				<li>Oracle JDK 8</li>
				<li>AdoptOpenJDK 8</li>
			</ul>
		</td>
	</tr>
	<tr>
		<th>Supported Operating Systems</th>
		<td>
			<ul>
				<li>macOS Catalina 10.15.7</li>
				<li>Ubuntu 20.04</li>
				<li>Ubuntu 18.04</li>
				<li>Windows 10</li>
				<li>openSUSE Tumbleweed 20201114</li>
			</ul>
		</td>
	</tr>
</table>

### Tested DBMSs

WSO2 Identity Server supports the following DBMSs.

<table>
	<tr>
		<th>WSO2 Identity Server</th>
		<td>
			<ul>
				<li>MySQL 8.0</li>
				<div class="admonition warning">
					<p class="admonition-title"></p>
					<p>To use MySQL 8.0, you need to create the database with charset latin1 as shown below</p>
					<p><code>create database regdb <br> character set latin1; </code></p>
				</div>
				<li>MySQL 5.7</li>
				<li>Oracle 19c</li>
				<li>Oracle 12c</li>
				<li>Microsoft SQL Server 2019</li>
				<li>DB2 v11.5</li>
<<<<<<<< HEAD:en/identity-server/5.11.0/docs/setup/environment-compatibility.md
				<li>Postgres 14.2</li>
				<li>Postgres 13.6</li>
				<li>Postgres 12.2</li>
				<li>Postgres 12.4</li>
				<li>MariaDB 10.4.13</li>
========
				<li>DB2 v10.5 (Compatibility mode: MYS)</li>
				<li>Postgres 11</li>
				<li>Postgresql 10.5</li>
				<li>Postgresql 12.4</li>
>>>>>>>> 5.10.0-docs-old:en/identity-server/5.10.0/docs/setup/environment-compatibility.md
			</ul>
		</td>
	</tr>
	<tr>
		<th>WSO2 Identity Server Analytics</th>
		<td>
			<ul>
				<li>MySQL 5.7.15</li>
				<li>MySQL 8.0</li>
				<li>Microsoft SQL Server  2014</li>
				<li>Microsoft SQL Server 2019</li>
				<li>Oracle 12.1.0.2.0</li>
				<li>Oracle 12.2.0.1</li>
				<li>Oracle 19c</li>
				<li>Postgres 11</li>
				<li>Postgres 10.5</li>
			</ul>
		</td>
	</tr>
</table>

### Tested Web Browsers

<ul>
	<li>Mozilla Firefox 75.0 (64-bit)</li>
	<li>Mozilla Firefox 81.0.2 (64-bit)</li>
	<li>Google Chrome Version 84.0.4147.125 (Official Build, 64-bit)</li>
	<li>Google Chrome Version 85.0.4183.102 (Official Build, 64-bit)</li>
	<li>Google Chrome Version 86.0.4240.75 (Official Build, x86_64)</li>
	<li>Chromium version 86.0.4240.111 (Official Build)</li>
	<li>MS Edge 44.18362</li>
	<li>Safari 13.0.3</li>
</ul>

### Tested LDAPs

Following is a list of LDAPs that WSO2 Identity Server 5.11.0 is tested with.

<ul>
	<li>Open LDAP 2.4.28</li>
	<li>Microsoft Active Directory Windows 2012</li>
</ul>




